tests/cmd_fix_bad.out
./cmd_fix_bad.svx:2:9: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:3:11: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:4:30: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:5:35: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:6:12: error: Expecting numeric field, found "test"
./cmd_fix_bad.svx:8:20: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:9:22: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:10:41: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:11:46: error: Expecting numeric field, found ""
./cmd_fix_bad.svx:12:23: error: Expecting numeric field, found "test"

Removing trailing traverses...

Concatenating traverses...

Simplifying network...

Calculating network...

Calculating traverses...

Calculating trailing traverses...

Calculating statistics...

Survey contains 1 survey station, joined by 0 legs.
There are 0 loops.
Total length of survey legs =    0.00m (   0.00m adjusted)
Total plan length of survey legs =    0.00m
Total vertical length of survey legs =    0.00m
   1 0-node.
There were 0 warning(s) and 10 error(s) - no output files produced.
